language/move-lang/tests/move_check/parser/let_binding_missing_paren.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/let_binding_missing_paren.move:3:21
  │
3 │         let (x1, x2 = (1, 2); // Test a missing right parenthesis
  │             -       ^ Expected ')'
  │             │        
  │             To match this '('

